<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFullInfoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="281dp"

        android:background="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        style="@style/avaStyle"
        android:layout_marginTop="40dp"
        android:src="@drawable/noavatar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
          />

    <TextView
        android:id="@+id/userName"
        style="@style/nameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="35sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/followBtnText"
        android:textSize="@dimen/textSize"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@+id/userInfo" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/button">

        <LinearLayout
            android:id="@+id/firstLine0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/followerText"
                style="@style/viewElementStyle1"
                android:text="" />

            <TextView
                android:id="@+id/followingText"
                style="@style/viewElementStyle1"
                android:text="" />

            <TextView
                android:id="@+id/socialScoreText"
                style="@style/viewElementStyle1"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/viewElementStyle"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/textView2"
                style="@style/viewElementStyle"
                android:text="@string/following" />

            <TextView
                android:id="@+id/textView3"
                style="@style/viewElementStyle"
                android:text="@string/social_score" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/postsText"
                style="@style/viewElementStyle1"
                android:text="" />

            <TextView
                android:id="@+id/sharemeterText"
                style="@style/viewElementStyle1"
                android:text="" />

            <TextView
                android:id="@+id/reachText"
                style="@style/viewElementStyle1"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@id/firstLine">

            <TextView
                android:id="@+id/textView6"
                style="@style/viewElementStyle"
                android:text="@string/posts" />

            <TextView
                android:id="@+id/textView7"
                style="@style/viewElementStyle"
                android:text="@string/sharemeter" />

            <TextView
                android:id="@+id/textView8"
                style="@style/viewElementStyle"
                android:text="@string/reach" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>