<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserFullInfoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:background="@drawable/bg"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        style="@style/avaStyle"
        android:layout_marginTop="24dp"
        android:src="@drawable/noavatar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        style="@style/nameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:inputType="text"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="LabelFor,MissingConstraints,TextFields"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfo">

        <LinearLayout
            android:id="@+id/firstLine0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/followerText"
                style="@style/viewElementStyle1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/followingText"
                style="@style/viewElementStyle1"
                android:ems="10"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/socialScoreText"
                style="@style/viewElementStyle1"
                android:ems="10"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/viewElementStyle"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/textView2"
                style="@style/viewElementStyle"
                android:text="@string/following" />

            <TextView
                android:id="@+id/textView3"
                style="@style/viewElementStyle"
                android:text="@string/social_score" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/postsText"
                style="@style/viewElementStyle1"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/sharemeterText"
                style="@style/viewElementStyle1"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/reachText"
                style="@style/viewElementStyle1"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@id/firstLine">

            <TextView
                android:id="@+id/textView6"
                style="@style/viewElementStyle"
                android:text="@string/posts" />

            <TextView
                android:id="@+id/textView7"
                style="@style/viewElementStyle"
                android:text="@string/sharemeter" />

            <TextView
                android:id="@+id/textView8"
                style="@style/viewElementStyle"
                android:text="@string/reach" />
        </LinearLayout>



    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"

        app:backgroundTint="#AD03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>